<resources>
    <string name="app_name">Aro</string>
    <string name="hello_blank_fragment">MADE BY NASSAFY</string>

    <!-- 로그인 및 회원가입 -->
    <string name="join_already_exist_email_text">사용 중이거나 적절하지 않은 이메일입니다</string>
    <string name="join_button_text">처음 오셨나요? 회원가입하기</string>
    <string name="start_naver_textview_text">네이버로 시작하기</string>
    <string name="start_github_textview_text">깃허브로 시작하기</string>
    <string name="login_edittext_email_hint_text">EMAIL</string>
    <string name="login_edittext_pw_hint_text">PW</string>
    <string name="made_by_textview_text">© MADE BY NASSAFY</string>

    <string name="email_empty_text">이메일을 입력해주세요</string>
    <string name="password_empty_text">비밀번호를 입력주세요</string>

    <string name="email_edittext_text">이메일</string>
    <string name="email_validate_number_edittext_text">이메일 인증 번호</string>
    <string name="email_validate_number_fail_textview_text">인증번호가 다릅니다</string>
    <string name="email_verify_textview_text">인증하기</string>
    <string name="email_verify_progress_textview_text">인증 이메일을 보내는 중 입니다.\n잠시만 기다려주세요!</string>

    <string name="password_edittext_text">비밀번호</string>
    <string name="password_validate_edittext_text">비밀번호 확인</string>
    <string name="password_rule_fail_textview_text">비밀번호는 영어, 특수문자, 숫자로 구성된 8에서 15글자 사이여야만 합니다!</string>
    <string name="password_validate_fail_textview_text">비밀번호와 비밀번호 확인 내용이 다릅니다</string>

    <string name="nickname_edittext_text">닉네임</string>
    <string name="nickname_validate_fail_blank_edittext_text">닉네임에는 공백문자를 사용할 수 없습니다</string>

    <!-- 회원가입 서비스 선택 -->
    <string name="join_service_select_skip_button_text">나중에 선택하기</string>
    <string name="join_service_select_page_title_text">이용하실 서비스를 선택해주세요</string>
    <string name="join_service_select_skip_inform_textview_text">마이페이지에서 언제든지 다시 선택할 수 있어요</string>

    <!-- 서비스 선택 -->
    <string name="service_select_inform_textview_text">지금 선택하지 않아도 나중에 선택할 수 있어요!</string>
    <string name="service_aurora_not_selected_textview_text">오로라 서비스를 선택 하지 않았습니다!</string>
    <string name="service_meteor_not_selected_textview_text">유성우 서비스를 선택 하지 않았습니다!</string>
    <!-- 명소 선택 -->
    <string name="location_select_title_textview_text">관심 위치를 선택해주세요</string>
    <string name="location_not_select_textview_text">선택한 관심위치가 없습니다! 관심위치를 선택해주세요.</string>

    <!-- 서비스 선택 -->
    <string name="service_aurora">aurora</string>
    <string name="service_meteor_shower">meteor shower</string>

    <!-- 홈 및 메인 -->
    <string name="kp_index_textview_text">KP INDEX</string>
    <string name="my_favorite_textview_text">MY FAVORITE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bottom_sheet_name_test_text">그리핀도르</string>
    <string name="bottom_sheet_percent_test_text">88%</string>
    <string name="dialog_no_probs">확률 정보를 불러오지 못했습니다</string>
    <string name="dialog_retry">잠시 후 다시 시도해주세요!</string>

    <!--  타이머 다이얼 로그 -->
    <string name="date_dialog_date_title_textview_text">DATE</string>
    <string name="date_dialog_hour_title_textview_text">HOUR</string>

    <!-- 다이얼로그 버튼 -->
    <string name="dialog_confirm_button_text"><u>확인</u></string>
    <string name="dialog_cancel_button_text">취소</string>
    <string name="dialog_date_test_text">23 / 03 / 17</string>


    <!-- 스탬프 인증 실패 -->
    <string name="stamp_main_title_textview_text">STAMP</string>
    <string name="stamp_certification_fail_dialog_title_textview_text">인증 실패</string>
    <string name="stamp_certification_fail_dialog_inform_textview_text">인증을 다시 진행해주세요!</string>
    <string name="stamp_certification_date_title_textview_text">인증 날짜 : </string>


    <!-- 일지 기록 페이지 -->
    <string name="diary_history_no_image_main_textview_text">등록된 이미지가 없습니다.</string>
    <string name="diary_history_no_image_sub_textview_text">이미지를 등록하고 기록지를 꾸며보세요!</string>
    <string name="diary_history_add_image_button_text">이미지 추가하기</string>
    <string name="diary_history_remove_image_button_text">이미지 삭제하기</string>
    <string name="diary_history_add_diary_title_textview_text">일지</string>

    <!-- SETTING 페이지 -->
    <string name="settings_fragment_title_textview_text">SETTINGS</string>
    <string name="settings_fragment_notification_set_title_textview_text">알림</string>
    <string name="settings_fragment_notification_set_inform_textview_text">설정한 명소의 알림을 받을지 설정할 수 있습니다.</string>

    <string name="settings_fragment_map_on_aurora_set_title_textview_text">지도 오로라 표시</string>
    <string name="settings_fragment_map_on_aurora_set_inform_textview_text">지도에 오로라를 표시할지 설정합니다.</string>

    <string name="settings_fragment_map_on_cloud_set_title_textview_text">지도 구름 표시</string>
    <string name="settings_fragment_map_on_cloud_set_inform_textview_text">지도에 구름을 표시할지 설정합니다.</string>

    <string name="settings_fragment_delete_account_title_textview_text">회원탈퇴</string>
    <string name="settings_fragment_delete_account_inform_textview_text">회원을 탈퇴하여 더 이상 서비스를 이용하지 않습니다.</string>

    <string name="delete_account_dialog_title_textview_text">회원 탈퇴를 진행할까요?</string>
    <string name="delete_account_dialog_inform_textview_text">회원 탈퇴시 서비스를 더 이상 이용하실 수 없습니다.</string>


    <!-- 마이페이지 -->
    <!-- 닉네임 변경 -->
    <string name="my_page_main_title_textview_text">MY PAGE</string>
    <string name="my_page_nickname_modify_error_dialog_title_textview_text">해당 닉네임을 사용할 수 없습니다</string>
    <string name="my_page_nickname_modify_error_dialog_inform_textview_text">닉네임은 3자리 이상 10자리 이하로 설정해야 합니다.</string>

    <string name="my_page_my_favorite_inform_textview_text">명소를 등록하거나 수정합니다.</string>
    <string name="my_page_my_favorite_modify_success_text">관심 위치 등록에 성공했습니다! </string>

    <!-- 서비스 등록 하지 않았을 때 -->
    <string name="my_page_not_select_service_title_textview_text">아직 서비스를 등록하지 않으셨네요!</string>
    <string name="my_page_not_select_service_inform_textview_text">서비스를 등록하고 알림을 받아보세요</string>


    <!-- 서비스 변경 -->
    <string name="service_modify_no_have_service_dialog_title_textview_text">알림</string>
    <string name="service_modify_no_have_service_dialog_inform_textview_text">기존에 사용하시던 서비스를 OFF 하실 경우 저장되어있던 명소 데이터도 지워질 수 있습니다.</string>
    <string name="service_modify_success_text">서비스 등록 성공했습니다! </string>

    <!-- 국가 이름 -->
    <string name="country_name_usa_text">미국</string>
    <string name="country_name_greenland_text">그린란드</string>
    <string name="country_name_iceland_text">아이슬란드</string>
    <string name="country_name_canada_text">캐나다</string>
    <string name="country_name_finland_text">핀란드</string>
    <string name="country_name_russia_text">러시아</string>
    <string name="country_name_norway_text">노르웨이</string>
    <string name="country_name_sweden_text">스웨덴</string>
    <string name="country">국가</string>

    <!-- Meteor Shower -->
    <string name="meteor_not_ready_text">준비 중입니다</string>
    <string name="meteor_item_detail">거문고자리 유성우는 48가지 별자리 중 하나로 매년 4월 거문고자리 방향에서 관측할 수 있는 봄철 천체현상이다. 거문고자리 유성우는 기원전 687년 춘추전국시대 시기에도 관측되었다고 기록이 있음만큼 역사가 있는 유성우 중 하나이다. 거문고자리 유성우는 일반적으로 시간당 10개에서 20개 정도 쏟아진다. 다른 유성우에 비해 떨어지는 개수가 적지만 매우 밝게 빛나 쉽게 관측이 가능하며, 직녀성 부근을 복사점으로 사방으로 흩어지며 쏟아지기 때문에 어느 방향에서나 볼 수 있다.</string>
</resources>
