<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/map_info_linearlayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/map_info_background"
        android:padding="4dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:elevation="0dp"
            android:background="@drawable/map_info_background"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dip">

            <ImageView
                android:id="@+id/map_info_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:background="@drawable/map_info_background"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/map_info_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/country_name_iceland_text"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/map_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bottom_sheet_percent_test_text"
            android:textColor="@color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/map_info_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/main_app_color" />

</FrameLayout>


