<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/join_background_color"
    tools:context=".ui.view.sign.SignUpPasswordFragment">

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/back_step_arrow_button_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/sign_up_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_button" >

        <EditText
            android:id="@+id/sign_up_email_id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_app_color_light"
            android:hint="@string/password_edittext_text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/verify_email_fail_textview"
            android:text="@string/email_validate_number_fail_textview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/join_edit_text_error_color"
            android:visibility="invisible"
            tools:visibility="visible"/>

        <EditText
            android:id="@+id/verify_email_id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_app_color_light"
            android:hint="@string/password_validate_edittext_text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/password_validate_fail_textview"
            android:text="@string/password_validate_fail_textview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/join_edit_text_error_color"
            android:visibility="invisible"
            tools:visibility="visible"/>
    </LinearLayout>


    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/next_button_isclickable_false"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
