<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/dialog_background_color"
    app:cardCornerRadius="24dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nanum_square_b"
            android:text="@string/date_dialog_date_title_textview_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/date_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/hour_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nanum_square_b"
            android:text="@string/date_dialog_hour_title_textview_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/hour_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/nanum_square_r"
            android:text="@string/dialog_confirm_button_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>